@@ -68,6 +68,9 @@ Bug Fixes
 
 * SOLR-4309: /browse: Improve JQuery autosuggest behavior (janhoy)
 
+* SOLR-4330: group.sort is ignored when using group.truncate and ex/tag
+  local params together (koji)
+
 Optimizations
 ----------------------
 
